Sec_Grp.tf
# Security group to allow SSH & HTTP access to VPC, and allow all traffic from VPC
resource "aws_security_group" "allow_ssh_tcp" {
 name = "allow_ssh_tcp"
 description = "Allow SSH & HTTP traffic"
 vpc_id = aws_vpc.NK_VPC.id
  ingress {
   description      = "allow SSH"
   from_port        = 22
   to_port          = 22
   protocol         = "tcp"
   cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
   description      = "allow web http"
   from_port        = 80
   to_port          = 80
   protocol         = "tcp"
   cidr_blocks      = ["0.0.0.0/0"]
  }
  egress {
   description      = "allow all traffic"
   from_port        = 0
   to_port          = 0
   protocol         = "-1"
   cidr_blocks      = ["0.0.0.0/0"]
  }
  tags = {Name = "allow_ssh_http"}
}
